huuuuge commit on the last 2 days of work. Mostly React stuff, UI/UX stuff and some backend adjustements. WIP for the api doc
