# backend/routes/authRoute.js
@@ -1,8 +1,9 @@
-import express, {Router} from 'express'
+import express, { Router } from 'express'
 const router = Router();
 
-import { login } from "../controllers/authController.js";
+import { login, logout } from "../controllers/authController.js";
 
 router.route('/login').post(express.json(), login)
+router.route('/logout').get(logout)
 
-export {router as authRoute}
+export { router as authRoute }
